<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/setting_list_gap"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/border"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.example.wanjukim.homeworkmonster.utils.ClearEditText
            android:id="@+id/etv_subject"
            android:layout_width="0dp"
            android:layout_height="@dimen/etv_gap"
            android:layout_marginLeft="96dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/etv_item_selector"
            android:hint="@string/subjectname"
            android:textCursorDrawable="@drawable/etv_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="@dimen/setting_list_gap"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/border"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/semester"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.example.wanjukim.homeworkmonster.utils.EventListenSpinner
            android:id="@+id/spinner_semester"
            android:layout_width="0dp"
            android:layout_height="@dimen/spinner_gap"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="@dimen/setting_list_gap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/professor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.example.wanjukim.homeworkmonster.utils.ClearEditText
            android:id="@+id/etv_professor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="96dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="0dp"
            android:autoLink="all"
            android:background="@drawable/etv_item_selector"
            android:hint="@string/professorname"
            android:minHeight="@dimen/etv_gap"
            android:textCursorDrawable="@drawable/etv_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="@dimen/setting_list_gap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/classroom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.example.wanjukim.homeworkmonster.utils.ClearEditText
            android:id="@+id/etv_classroom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="96dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="0dp"
            android:autoLink="all"
            android:background="@drawable/etv_item_selector"
            android:hint="@string/classroomname"
            android:minHeight="@dimen/etv_gap"
            android:textCursorDrawable="@drawable/etv_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="@dimen/setting_list_gap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/memo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.example.wanjukim.homeworkmonster.utils.ClearEditText
            android:id="@+id/etv_semester_memo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="96dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="0dp"
            android:autoLink="all"
            android:background="@drawable/etv_item_selector"
            android:hint="@string/details"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="5"
            android:minHeight="@dimen/etv_gap"
            android:minLines="1"
            android:textCursorDrawable="@drawable/etv_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>